--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-mini-netflix></app-mini-netflix>
+<div class="container">
+  <h1>
+    {{title}}
+  </h1>
+
+  <app-mini-netflix></app-mini-netflix>
+</div>
+
