Added nav annd flix components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<div class="container">
-  <h1>
-    {{title}}
-  </h1>
 
-  <app-mini-netflix></app-mini-netflix>
+<app-nav></app-nav>
+
+<div class="container">
+  <app-flix></app-flix>
 </div>
 
