--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  color: red;
+}
+
 body {
   background: #0a0a0a;
 }
@@ -35,4 +39,18 @@ button {
 }
 .toast-warning {
   background-color: #f89406;
+}
+.card {
+  background: transparent;
+  border: 1px solid red;
+}
+
+.card-title,
+.card-text {
+  color: #fefefe;
+}
+
+.card-buttons {
+  display: flex;
+  justify-content: space-between;
 }
